Added display, storage and motherboard info