@@ -26,3 +26,7 @@
             )
         }
     }
+
+    run {
+        jvmArgs += ["--enable-native-access=ALL-UNNAMED"]
+    }
